--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 </head>
 <body>
 <div class="header">
-    <h1>김태욱, Teddy Kims</h1>
-    <h3 class="label">Hacker</h3>
-    <div class="contact-header">Seoul, Korea<br>
+    <h1>신원용, Calssess</h1>
+    <h3 class="label">백수</h3>
+    <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
     </div>
     <div id="contact">
         <br>
         <div class="contact-header">
             EMAIL <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span><a
-                href="mailto:xodnr631@gmail.com" target="_blank">xodnr631@gmail.com</a> <span
+                href="mailto:xodnr631@gmail.com" target="_blank">tlsdnjsdyd@naver.com</a> <span
                 class="responsive-show"><br><br></span>
         </div>
         <div class="contact-header">
-            PHONE <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span>010-3230-9051 <span
+            PHONE <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span>010-8144-7551 <span
                 class="responsive-show"><br><br></span>
         </div>
         <!--<div class="contact-header">-->
