--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TeddyKim</title>
+    <title>WonYong Shin</title>
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <div class="header">
-    <h1>신원용, Calssess</h1>
+    <h1>신원용, WonYong Shin</h1>
     <h3 class="label">백수</h3>
     <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
