--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
         <div class="contact-header">
             EMAIL <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span><a
-                href="mailto:xodnr631@gmail.com" target="_blank">tlsdnjsdyd@naver.com</a> <span
+                href="mailto:tlsdnjsdyd@naver.com" target="_blank">tlsdnjsdyd@naver.com</a> <span
                 class="responsive-show"><br><br></span>
         </div>
         <div class="contact-header">
