페북/인스타 테스트_1

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     <div id="profiles">
         <div class="contact-header">PROFILES</div>
         <br>
-        <p class="profile"><a href="https://www.facebook.com/xodnr" target="_blank" class="profile">FaceBook</a></p>
-        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank" class="profile">Linkedin</a></p>
-        <p class="profile"><a href="https://speakerdeck.com/teddykims" target="_blank" class="profile">SpeakerDeck</a>
+        <p class="profile"><a href="https://www.facebook.com/wonyong.shin.9" target="_blank" class="profile">FaceBook</a></p>
+        <p class="profile"><a href="https://www.instagram.com/calssess" target="_blank" class="profile">Instagram</a>
         </p>
     </div>
 </div>
