--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <br>
     <div id="profiles">
-        <div class="contact-header">PROFILES</div>
+        <div class="contact-header"> <i class="fa fa-snowflake-o" aria-hidden="true"></i> PROFILES</div>
         <br>
         <p class="profile"><a href="https://www.facebook.com/wonyong.shin.9" target="_blank" class="profile">FaceBook</a></p>
         <p class="profile"><a href="https://www.instagram.com/calssess" target="_blank" class="profile">Instagram</a>
