--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--</div>-->
         <!--</div>-->
         <div id="skills">
-            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
+            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS <i class="fa fa-snowflake-o" aria-hidden="true"></i></h2>
             <div>
                 <h3 class="skills">Client</h3>
                 <span class="keywords">HTML</span>
