ㄴ이미지들사이즈실패_질문요망

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="header">
     <h1>신원용, WonYong Shin</h1>
-    <h3 class="label"> <i class="fa fa-snowflake-o" aria-hidden="true"></i> 꽃보더 / 프로그래머 유망주</h3>
+    <h3 class="label">꽃보더 / 프로그래머 유망주</h3>
     <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
     </div>
@@ -35,7 +35,7 @@
     </div>
     <br>
     <div id="profiles">
-        <div class="contact-header"> <i class="fa fa-snowflake-o" aria-hidden="true"></i> PROFILES</div>
+        <div class="contact-header"> PROFILES</div>
         <br>
         <p class="profile"><a href="https://www.facebook.com/wonyong.shin.9" target="_blank" class="profile">FaceBook</a></p>
         <p class="profile"><a href="https://www.instagram.com/calssess" target="_blank" class="profile">Instagram</a>
@@ -51,7 +51,7 @@
         <!--</div>-->
         <!--</div>-->
         <div id="skills">
-            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS <i class="fa fa-snowflake-o" aria-hidden="true"></i></h2>
+            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
             <div>
                 <h3 class="skills">Client</h3>
                 <span class="keywords">HTML</span>
