--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div id="contact">
         <br>
         <div class="contact-header">
-            EMAIL <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span><a
+            <i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span><a
                 href="mailto:tlsdnjsdyd@naver.com" target="_blank">tlsdnjsdyd@naver.com</a> <span
                 class="responsive-show"><br><br></span>
         </div>
         <div class="contact-header">
-            PHONE <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span>010-8144-7551 <span
+            <i class="fa fa-phone" aria-hidden="true"></i> <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span>010-8144-7551 <span
                 class="responsive-show"><br><br></span>
         </div>
         <!--<div class="contact-header">-->
