--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
     </div>
     <div id="right">
         <div id="work">
-            <h2>WORKS <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
+            <h2>Career <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
             <div>
-                <h3>휴마트컴퍼니, HumartCompany</h3>
-                <h4>2014.11 ~ -ing</h4>
-                <h3>나누잡, Nanujob</h3>
-                <h4>2014.03 ~ 2014.10</h4>
+                <h3>명지대학교, MyongJi University</h3>
+                <h4>전자공학과</h4>
+                <h3>한국스노우보드대학연합 임원진</h3>
+                <h4>KUSBF</h4>
             </div>
             <br/>
         </div>
