Speaker-Base_수정

--- a/index.html
+++ b/index.html
@@ -172,34 +172,13 @@
             <br/>
         </div>
         <div id="volunteer">
-            <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
+            <h2>Base <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
-                <h3>"개발자의 인공지능 뽀개기"</h3>
-                <h4>2017.10.15 - 피자뽀개기</h4>
-                <h3>"오늘 내일 바쁜 개발자를 위한 미래 탐방기"</h3>
-                <h4>2017.08.26 - 2017년 8월 IT 네트워킹 정모</h4>
-                <h3>"오늘 내일 바쁜 개발자를 위한 미래 탐방기"</h3>
-                <h4>2017.08.20 - GDG Campus Summer Party</h4>
-                <h3>"소프트웨어와 미래기술"</h3>
-                <h4>2017.05.27 - 2017년, 5월 소프트웨어에 물들다</h4>
-                <h3>"스타트업 개발자의 이야기"</h3>
-                <h4>2016.06.12 - KSIA 제13회 IT4U 개발강연회</h4>
-                <h3>"스타트업 개발자의 이야기"</h3>
-                <h4>2016.05.20 - 경기대학교 외부 강의</h4>
-                <h3>"풀스택 개발자의 스타트업 창업기"</h3>
-                <h4>2015.11.29 - KSIA 내부 세미나</h4>
-                <h3>"웹 프로그래밍 공부 방법"</h3>
-                <h4>2015.03.08 - KSIA 내부 세미나</h4>
-                <h3>"웹 프로그래밍 공부 방법"</h3>
-                <h4>2015.02.24 - KSIA 내부 세미나</h4>
-                <h3>"창업을 한다는 것"</h3>
-                <h4>2014.08.11 - KSIA 내부 세미나</h4>
-                <h3>"무선 네트워크 해킹과 보안"</h3>
-                <h4>2013.08.17 - 제8회 해킹캠프</h4>
-                <h3>"리눅스 최신 보안시스템의 이해"</h3>
-                <h4>2013.04.03 - 코드게이트 주니어</h4>
-                <h3>"리눅스 메모리 보호기법의 이해"</h3>
-                <h4>2013.02.23 - 제7회 해킹캠프</h4>
+                <h3>휘닉스 평창, Phoenix PyeongChang</h3>
+                <h4>16/17 시즌 </h4>
+                <h3>웰리힐리 파크, Wellihilli Park</h3>
+                <h4>17/18 시즌예정</h4>
+                
             </div>
             <br/>
         </div>
