--- a/index.html
+++ b/index.html
@@ -53,39 +53,23 @@
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
             <div>
-                <h3 class="skills">Client</h3>
-                <span class="keywords">HTML</span>
-                <span class="keywords">CSS</span>
-                <span class="keywords">JavaScript</span>
-                <h3 class="skills">Server</h3>
-                <span class="keywords">PHP</span>
-                <span class="keywords">Node.js</span>
-                <span class="keywords">PHP-Codeigniter</span>
-                <span class="keywords">PHP-Laravel</span>
-                <span class="keywords">Python-Django</span>
-                <span class="keywords">Go</span>
-                <span class="keywords">Ruby on Rails</span>
-                <span class="keywords">C</span>
-                <span class="keywords">SQL</span>
-                <span class="keywords">SQL-MySQL</span>
-                <span class="keywords">SQL-MariaDB</span>
-                <h3 class="skills">Program</h3>
-                <span class="keywords">VisualBasic</span>
-                <span class="keywords">Delphi</span>
-                <h3 class="skills">Tools/ETC</h3>
-                <span class="keywords">Docker</span>
-                <span class="keywords">AWS</span>
-                <span class="keywords">Azure</span>
-                <span class="keywords">BlueMix</span>
-                <span class="keywords">NCloud</span>
-                <span class="keywords">GDB</span>
-                <span class="keywords">IDA</span>
-                <span class="keywords">Github</span>
-                <span class="keywords">Bitbucket</span>
-                <span class="keywords">GitLab</span>
-                <span class="keywords">Trello</span>
-                <span class="keywords">Jandi</span>
-                <span class="keywords">Slack</span>
+                <h3 class="skills">Language</h3>
+                <span class="keywords">Korean</span>
+                <span class="keywords">English</span>
+
+                <h3 class="skills">SnowBoarding</h3>
+                <span class="keywords">Basic Turn</span>
+                <span class="keywords">Novice Turn</span>
+                <span class="keywords">Carving Turn</span>
+                <span class="keywords">Ground Trick</span>
+
+                <h3 class="skills">Traveled</h3>
+                <span class="keywords">Philippines</span>
+                <span class="keywords">Saipan</span>
+                <span class="keywords">Japan</span>
+                <span class="keywords">Taiwan</span>
+                <span class="keywords">Laos</span>
+
             </div>
             <br/>
         </div>
@@ -178,7 +162,7 @@
                 <h4>16/17 시즌 </h4>
                 <h3>웰리힐리 파크, Wellihilli Park</h3>
                 <h4>17/18 시즌예정</h4>
-                
+
             </div>
             <br/>
         </div>
