--- a/index.html
+++ b/index.html
@@ -74,29 +74,24 @@
             <br/>
         </div>
         <div id="work">
-            <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> TEAMS</h2>
+            <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> Sponsor</h2>
             <div>
-                <h3>Seoul.js</h3>
-                <h4>2017.07 ~ -ing</h4>
-                <h3>코딩클럽 (CodingClub) 1기</h3>
-                <h4>2015</h4>
-                <h3>서울융합인재사관학교 2기</h3>
-                <h4>2014 ~ 2015</h4>
-                <h3>KSIA, 한국 학생 IT 연합 (Korea Student Information technology Alliance)</h3>
-                <h4>2012 ~ 2015</h4>
-                <ul>
-                    <li>2012 창립</li>
-                    <li>2014 - 2015 부대표 활동</li>
-                </ul>
-                <h3>Pwn2play</h3>
-                <h4>2013</h4>
-                <ul>
-                    <li>2013 국제해킹방어대회 코드게이트 12등</li>
-                </ul>
-                <h3>WiseGuys</h3>
-                <h4>2012</h4>
-                <h3>Sur3x5f</h3>
-                <h4>2012</h4>
+                <h3>Dimito / Main sponsor</h3>
+                <h4>디미토</h4>
+                <h3>GMP Company</h3>
+                <h4>지엠피 컴퍼니</h4>
+                <h3>F.I Mafia</h3>
+                <h4>에프아이 마피아</h4>
+                <h3>Q-Mile</h3>
+                <h4>큐마일</h4>
+                <h3>B.S Rabbit</h3>
+                <h4>비에스래빗</h4>
+                <h3>2XB</h3>
+                <h4>투엑스비</h4>
+                <h3>USS2</h3>
+                <h4>어스투</h4>
+                <h3>ROMP</h3>
+                <h4>롬프</h4>
             </div>
             <br/>
         </div>
