레퍼런스-For Dream_수정

--- a/index.html
+++ b/index.html
@@ -95,48 +95,7 @@
             </div>
             <br/>
         </div>
-        <div id="references">
-            <h2><i class="fa fa-gears left" aria-hidden="true"></i> PROJECTS</h2>
-            <div>
-                <h3>'AddCampus' 웹 서비스 + 인트라넷 웹</h3>
-                <h4>HTML, CSS, JS, PHP, Node.js</h4>
-                <h3>'AddVance' API, 채팅 서버</h3>
-                <h4>PHP-Codeigniter, Node.js</h4>
-                <h3>'Wion' 인트라넷 웹</h3>
-                <h4>HTML, CSS, JS</h4>
-                <h3>'Lawill' 변호사-의뢰인 중계 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'AValue' 부동산 인트라넷 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>한국형 'Craig's List' 중고 쇼핑몰 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'YZLab' 의료 물품 쇼핑몰 웹/서버</h3>
-                <h4>WordPress</h4>
-                <h3>'FirstBike' 자전거 쇼핑몰 웹/서버</h3>
-                <h4>WordPress</h4>
-                <h3>'HereWeSolve' 여행 중계 웹/서버</h3>
-                <h4>WordPress</h4>
-                <h3>'작가의 탄생' 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'동아 시스템' 산업용 밸브 홍보 웹/서버</h3>
-                <h4>HTML, CSS, JS</h4>
-                <h3>'WizSpell' 게임 홍보 웹/서버</h3>
-                <h4>WordPress</h4>
-                <h3>논문 투고 인트라넷 웹/서버 + PDF 출력 서비스</h3>
-                <h4>HTML, CSS, JS, PHP-Codeigniter</h4>
-                <h3>'NanuBook' 동영상 관리 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>대학생 대외 활동 리뷰 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'EnergyLab' 쇼핑몰 웹</h3>
-                <h4>HTML, CSS, JS</h4>
-                <h3>'NanuGuestHouse' 게스트하우스 웹/서버</h3>
-                <h4>WordPress</h4>
-                <h3>'NanuJob' 교육 스타트업 웹/서버</h3>
-                <h4>HTML, CSS, JS, PHP</h4>
-            </div>
-            <br/>
-        </div>
+
         <br/>
     </div>
     <div id="right">
@@ -145,8 +104,12 @@
             <div>
                 <h3>명지대학교, MyongJi University</h3>
                 <h4>전자공학과</h4>
-                <h3>한국스노우보드대학연합 임원진</h3>
+                <h3>유량조사사업단, Hydrological Survey Center</h3>
+                <h4>2014년 여름 근무</h4>
+                <h3>한국스노우보드대학연합 17/18시즌 임원진</h3>
                 <h4>KUSBF</h4>
+                <h3>(현)사회복무요원 복무중</h3>
+                <h4>2016.07.28 ~ </h4>
             </div>
             <br/>
         </div>
@@ -162,24 +125,23 @@
             <br/>
         </div>
         <div id="teach">
-            <h2>REFERENCES <i class="fa fa-group right" aria-hidden="true"></i></h2>
+            <h2>For Dream <i class="fa fa-group right" aria-hidden="true"></i></h2>
             <div>
-                <h3>"프론트-백엔드 서버 겉핥기 3기" 스터디 진행</h3>
-                <h4>2017.08.03 ~ 2017.08.30</h4>
-                <h3>"프론트-백엔드 서버 겉핥기 2기" 스터디 진행</h3>
-                <h4>(DATE)</h4>
-                <h3>"프론트-백엔드 서버 겉핥기 1기" 스터디 진행</h3>
-                <h4>(DATE)</h4>
-                <h3>"현장(실무)에서의 개발 경험기!" 세미나 주최</h3>
-                <h4>2015.06.26 - 코딩클럽 6월</h4>
-                <h3>"그로스해킹으로 배우는 코딩의 의미!" 세미나 주최</h3>
-                <h4>2015.05.29 - 코딩클럽 5월</h4>
-                <h3>"KSIA 웹 프로그래밍 2기" 스터디 진행</h3>
-                <h4>(DATE)</h4>
-                <h3>"KSIA 웹 프로그래밍 1기" 스터디 진행</h3>
-                <h4>(DATE)</h4>
-                <h3>2013 국제해킹방어대회 코드게이트 12등</h3>
-                <h4>2013.05.29</h4>
+                <h3>토익 스터디 진행</h3>
+                <h4>2014 / 865점 달성 후 종료</h4>
+
+                <h3>전자공학과 전과</h3>
+                <h4>2015 / 토목공학과에서 전과 성공</h4>
+
+                <h3>실전 독일어마스터 스터디</h3>
+                <h4>2016 ~ / 유학 준비</h4>
+
+                <h3>휴학학교 실전코딩학개론 수강</h3>
+                <h4>2017 / 프로그래밍 열공중</h4>
+
+                <h3>독일 석사과정 수료</h3>
+                <h4>2023 / 단기적 목표</h4>
+
             </div>
             <br/>
         </div>
