바닥 주석 수정

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 
 <footer>
     <hr/>
-    TeddyKims
+    Calssess
     <br/>
-    Download on <a target="_blank" href="https://github.com/XoDNr/SimpleResumeWithNodeJS">https://github.com/XoDNr/SimpleResumeWithNodeJS</a>
+    Download on <a target="_blank" href="https://github.com/Calssess/Calssess.github.io">https://github.com/Calssess/Calssess.github.io</a>
 </footer>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
