아이콘수정

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--</div>-->
         <!--</div>-->
         <div id="skills">
-            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
+            <h2><i class="fa fa-thermometer-empty" aria-hidden="true"></i> SKILLS</h2>
             <div>
                 <h3 class="skills">Language</h3>
                 <span class="keywords">Korean</span>
@@ -74,7 +74,7 @@
             <br/>
         </div>
         <div id="work">
-            <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> Sponsor</h2>
+            <h2><i class="fa fa-thermometer-quarter" aria-hidden="true"></i> Sponsor</h2>
             <div>
                 <h3>Dimito / Main sponsor</h3>
                 <h4>디미토</h4>
@@ -100,7 +100,7 @@
     </div>
     <div id="right">
         <div id="work">
-            <h2>Career <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
+            <h2>Career <i class="fa fa-thermometer-half" aria-hidden="true"></i></i></h2>
             <div>
                 <h3>명지대학교, MyongJi University</h3>
                 <h4>전자공학과</h4>
@@ -114,7 +114,7 @@
             <br/>
         </div>
         <div id="volunteer">
-            <h2>Base <i class="fa fa-child right" aria-hidden="true"></i></h2>
+            <h2>Base <i class="fa fa-thermometer-three-quarters" aria-hidden="true"></i></h2>
             <div>
                 <h3>휘닉스 평창, Phoenix PyeongChang</h3>
                 <h4>16/17 시즌 </h4>
@@ -125,7 +125,7 @@
             <br/>
         </div>
         <div id="teach">
-            <h2>For Dream <i class="fa fa-group right" aria-hidden="true"></i></h2>
+            <h2>For Dream <i class="fa fa-thermometer-full" aria-hidden="true"></i></h2>
             <div>
                 <h3>토익 스터디 진행</h3>
                 <h4>2014 / 865점 달성 후 종료</h4>
