--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <div class="header">
-    <h1>신원용, WonYong Shin</h1>
-    <h3 class="label">꽃보더 / 프로그래머 유망주</h3>
+    <h1>신원용</h1>
+    <h2>Shin Won Yong</h2>
+    <h3 class="label">꿈꾸는 꽃보더</h3>
     <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
     </div>
