영이름 밑여백

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header">
     <h1>신원용</h1>
     <h3>Shin Won Yong</h3>
-    <h3 class="label">꿈꾸는 꽃보더</h3>
+    <h3 class="label">꿈꾸는 꽃보더</h3><br>
     <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
     </div>
