--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class="header">
     <h1>신원용</h1>
-    <h3>Shin Won Yong</h3>
-    <h3 class="label">꿈꾸는 꽃보더</h3><br>
+    <h3>Shin Won Yong</h3><br>
+    <h3 class="label">꿈꾸는 꽃보더</h3>
     <div class="contact-header">Anyang, Korea<br>
         <!--2712 Broadway St-->
     </div>
