--- a/htmltest.html
+++ b/htmltest.html
@@ -3,7 +3,7 @@
 <html>
 <head><meta charset="utf-8"></head>
 <body>
-  <table border="3">
+  <table boarder="3">
     <tr>
       <tr><td>기준</td> <td>나이</td><td>학교</td><td>동아리</td></tr>
       <tr><td>원용</td> <td>23</td><td>명지대학교</td><td>CIELO</td></tr>
