--- a/htmltest.html
+++ b/htmltest.html
@@ -6,10 +6,17 @@
   <table boarder="3">
     <tr>
       <tr><td>기준</td> <td>나이</td><td>학교</td><td>동아리</td></tr>
-      <tr><td>원용</td> <td>23</td><td>명지대학교</td><td>CIELO</td></tr>
-      <tr><td>서연</td> <td>23</td><td>세종대학교</td><td>Jump</td></tr>
+      <tr>
+        <td>  <input type="text" name="name" value="이름을 입력하시오"> <input type="submit"> </td>
+        <td>23</td>
+        <td>명지대학교</td>
+        <td>CIELO</td>
+      </tr>
+
 
   </table>
+
+
 
 
 </body>
