--- a/htmltest.html
+++ b/htmltest.html
@@ -3,18 +3,9 @@
 <html>
 <head><meta charset="utf-8"></head>
 <body>
-  <table boarder="3">
-    <tr>
-      <tr><td>기준</td> <td>나이</td><td>학교</td><td>동아리</td></tr>
-      <tr>
-        <td>  <input type="text" name="name" value="이름을 입력하시오"> <input type="submit"> </td>
-        <td>23</td>
-        <td>명지대학교</td>
-        <td>CIELO</td>
-      </tr>
-
-
-  </table>
+  95<input type="checkbox" name="size">
+  100<input type="checkbox" name="sizedsa">
+  105<input type="checkbox" name="asd">
 
 
 
